--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
-  "ownerNumber": ["6289514100625@s.whatsapp.net"],
+  "ownerNumber": ["201146593819@s.whatsapp.net"],
   "ownerName": ["Christian ID"],
   "botName": "Hitomi Store",
   "buttonName": "Youtube Official",
   "buttonLink": "https://youtube.com/c/ChristianID99",
   "buttonName2": "Instagram",
-  "buttonLink2": "https://instagram.com/chris.tianid",
+  "buttonLink2": "https://instagram.com/tart0g1ia?igshid=YmMyMTA2M2Y=",
   "sessionName": "session",
   "pathimg": "./media/hitomi.jpg",
   "gamewaktu": 60,
